wc-ng v0.7.4 2015-xx-xx

  added:
    - country names / flags should now work on zeromod servers
    - '/<WEAPON>flarecolor', '/<WEAPON>flaresize', '/<WEAPON>trailtime' vars
    - implemented extinfo ping coloring
    - nooblounge extinfo support
    - '/showclientnum 2': always show clientnum
    - '/showdamagedealt': show damage dealt
    - '/wcver [1]' which represents the current version of the client
      '/wcversion' should be avoided from now on
    - '/wcrev' string variable which represents the client git revision
    - server accross chat
    - sdl2 port (by pisto)
    - hwtemp plugin (windows, linux and OS X)
    - hwtemp hud display (windows, linux and OS X)
    - support for multiple master servers (/addmasterserver, /delmasterserver)
    - requireplugin cubescript function
    - servcmd event (N_SERVCMD)
    - playerdisplaymaxteams variable
    - '/resolveip' cubescript function
    - FreeBSD 10.x support (amd64)
    - '/stripextdemo': strip extinfo out of demos
    - '/recompressdemo': recompress demos with a different recompression level
    - '/getactioncn': useful for video streaming
    - '/autofollowactioncn': useful for video streaming
    - '/resolveip <ip>': resolve given ip address to its respective hostname
    - '/scoreboardtextcolor': change scoreboard text color
    - '/scoreboardtextcolorhead': change scoreboard text color

  changed:
    - extinfo enhancements
    - demo extinfo version has changed, thus, demos recorded with this version
      (or later) won't be extinfo compatible with older clients (while they will
      still play flawlessly!). it may be worth to mention that old demos *are*
      compatible with this version, but not the other way around.
    - enhanced server mod detection (including: hopmod, oomod, spaghettimod,
      suckerserv, remod, noobmod & zeromod)
    - in sync with sauerbraten r5067
    - libcurl update to 7.40.0
    - libgeoip update to 1.6.4