@@ -1,4 +1,5 @@
 #include "game.h"
+extern void rebindpingport(); //NEW
 
 namespace game
 {
@@ -8,7 +9,8 @@ namespace game
     FVARP(minimapalpha, 0, 1, 1);
     //NEW
     int demogamespeedold;
-    MODVARFP(demogamespeed, 0, 0, 1, {
+    MODVARFP(demogamespeed, 0, 0, 1,
+    {
         if (demoplayback)
         {
             conoutf(CON_ERROR, "demogamespeed variable can't be changed during demo playback.");
@@ -1316,7 +1318,8 @@ namespace game
             {
                 connected = true;
                 notifywelcome();
-                fullyconnected = true; //NEW
+                fullyconnected = true;      //NEW
+                rebindpingport();           //NEW
                 mod::extinfo::connect();    //NEW
                 break;
             }
